[package]
name = "block-breaker-tui"
description = "A tui frontend for the block breaker library"
repository = "https://github.com/jeffa5/block-breaker-tui"
readme = "README.md"
keywords = ["tui", "block", "breaker", "game"]
license = "MIT"
version = "0.1.0"
authors = ["Jeffas <dev@jeffas.io>"]
edition = "2018"

[dependencies]
block-breaker = { git = "https://github.com/jeffa5/block-breaker" }
crossterm = "0.9.6"
structopt = "0.3.20"

[dependencies.tui]
version = "0.6.1"
default-features = false
features = ["crossterm"]

